--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="container">
                 <div id="header">
-                    <h1>Flashcards</h1>
+                    <h1 class="title">Flashcards</h1>
                     <div>
                         <button id="addCard">Add Card</button>
                         <button id="delCard">Del Cards</button>
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </header>
-
+        <br>
         <section>
             <div class="container">
                 <div id="createCard">
